styles.css
:root {
  --background: #faf9f6;
  --pokeRed: #c00d0d;
  --pokeRed2: #fb0505;
  --pokeBlue: #0073ff;
  --pokeBlack: #000000;
  --pokeGrey: #b0b0b0;
  --pokeGreen: #50fb05;
  --pokeRadius: 16px;
  --titleSize: clamp(5rem, 10vw, 7rem);
  --searchBorder: 2px solid var(--pokeBlack);
  --subCircle: 25px;
  --subCircleMargins: 1rem 0.5rem 0;
  --btnPx: 69px;
}
* {
  margin: 0;
  padding: 0;
  font-size: 10px;
}
body,
html {
  background-color: var(--background);
  margin: clamp(5rem, 20vh, 6rem) 0 0;
}
h1 {
  font-family: "Pokemon Solid";
  font-size: var(--titleSize);
  text-align: center;
  color: #ffcc00;

  -webkit-text-stroke: 2px #003a70;
  letter-spacing: 14px;
  line-height: 1.1;
}
h2 {
  font-size: clamp(2rem, 10vw, 3rem);
}
input {
  height: 2.5rem;
  width: 15rem;
}
button {
  height: 2.5rem;
  width: 3rem;
}

input {
  width: 30rem;
  height: 3.5rem;
  padding-left: 1rem;
  font-size: 1.6rem;

  border: var(--searchBorder);
  border-radius: 3px;
  background-color: var(--background);
}
td {
  font-size: 2rem;
  padding: 0 0 0 1rem;
}
span {
  font-size: 1.7rem;
  padding: 1rem;
  margin: 0 1rem;
  border-radius: 6px;
}

@media only screen and (min-width: 320px) and (max-width: 480px) {
  body,
  html {
    overflow-y: auto;
    height: 100vh;
  }
}

